@@ -1,0 +1,6 @@
+There a quite a few script included with rdup, they break down in 
+a few categories, namely:
+
+o mirror scripts
+o auxilary support scripts
+o restore scripts
