@@ -7,6 +7,9 @@ crypt.sh, encrypt \- encrypt files received from \fBrdup -c\fR
 .SH SYNOPSIS
 .B crypt.sh
 .IR KEYFILE
+[
+.IR -d
+]
 
 .SH DESCRIPTION
 \fBcrypt.sh\fR encrypts the data it receives from \fBrdup\fR with the
@@ -17,6 +20,11 @@ For example,
         rdup -c list ~/Documents | crypt.sh KEY | mirror.sh -c -b /tmp/storage
 .PP
 Note the \fI-c\fR option for \fBmirror.sh\fR.
+
+.SH OPTIONS
+.TP
+.B \-d
+decrypt the files
 
 .SH SEE ALSO
 gzip.sh(1) and mirror.sh(8).
