@@ -11,9 +11,11 @@ S_ISDIR=16384   # octal: 040000 (This seems to be portable...)
 S_ISLNK=40960   # octal: 0120000
 S_MMASK=4095    # octal: 00007777, mask to get permission
 newsize=0
+OPT=""          # gzip or gunzip
+PROGNAME=$0
 
 cleanup() {
-        echo "** $0: Signal received while processing \`$path', exiting" > /dev/fd/2
+        echo "** $PROGNAME: Signal received while processing \`$path', exiting" > /dev/fd/2
         if [[ ! -z $TMPDIR ]]; then
                 rm -rf $TMPDIR
         fi
@@ -21,6 +23,25 @@ cleanup() {
 }
 # trap at least these
 trap cleanup SIGINT SIGPIPE
+
+usage() {
+        echo "$PROGNAME [-d]"
+        echo
+        echo "compress or decompress the file's contents"
+        echo
+        echo OPTIONS:
+        echo " -d        decompress the files"
+        echo " -h        this help"
+}
+
+while getopts "dh" o; do
+        case $o in
+                d) OPT="-d";;
+                h) usage && exit;;
+                \?) usage && exit;;
+        esac
+done
+shift $((OPTIND - 1))
 
 TMPDIR=`mktemp -d "/tmp/rdup.backup.XXXXXX"`
 if [[ $? -ne 0 ]]; then
@@ -47,7 +68,7 @@ do
                         0)      # REG
                         if [[ $fsize -ne 0 ]]; then
                                 # catch
-                                head -c $fsize | gzip -c > $TMPDIR/file.$$.gz
+                                head -c $fsize | gzip $OPT -c > $TMPDIR/file.$$.gz
                                 newsize=`stat --format "%s" $TMPDIR/file.$$.gz`
                                 echo "$dump$mode $uid $gid $psize $newsize"
                                 echo -n "$path"
