@@ -1,9 +1,12 @@
    Apr 2006: 0.2.7 Miek <miek@miek.nl>
-   -- bugfixes --
+   -- bugfixes + restore features --
    * re-touch the timestamp file at the end. This way an interupted
      backup can be re-run because all the rdup files are still untouched.
    * update mirror.sh manpage: removed -z -k from the manual
    * yesterday.sh: work correctly with directories
+   * gzip.sh accepts -d option: decompress
+   * crypt.sh accepts -d options: decrypt
+   Porting:
    * use cp -RP (works on FreeBSD) (ghostcorps (at) gmail.com)
    
 
